# pdf-word-replacer

./: .gitignore  README.md  pyproject.toml
src/pdf_word_replacer/: __init__.py  cli.py  core.py
tests/: test_cli.py
