[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-word-replacer"
version = "0.1.0"
description = "CLI tool to replace visible text in text-based PDF files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "reportlab>=4.4.0",
]

[project.scripts]
pdf-word-replacer = "pdf_word_replacer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
